[package]
name = "webhook-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
tokio = { version = "1", features = ["full"] }
linefeed = "0.6.0"
reqwest = {version = "0.11.11", features=["blocking"] }
serde_json = "1.0.83"